objects/Zone__c.object
<CustomObject>
    <label>Zone</label>
    <nameField>
        <displayFormat>ZC-{0000}</displayFormat>
        <label>Zone Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Zone_Name__c</fullName>
        <label>Zone Name</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone_Leader__c</fullName>
        <label>Zone Leader</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone_Number__c</fullName>
        <label>Zone Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zone_Description__c</fullName>
        <label>Zone Description</label>
        <type>TextArea</type>
    </fields>
</CustomObject>